BTScaner/ARM/Debug/BTScaner.log
  ANDROID_HOME=C:\Users\Administrator\AppData\Local\Android\Sdk
  ANDROID_SDK_ROOT=C:\Users\Administrator\AppData\Local\Android\Sdk
  ANT_HOME=
  JAVA_HOME=C:\Program Files\Android\jdk\jdk-8.0.302.8-hotspot\jdk8u302-b08
  NDK_ROOT=C:\Microsoft\AndroidNDK\android-ndk-r23c
  pch.h
  jnienv.cpp
  AddInNative.cpp
AddInNative.cpp(398,12): warning : unused variable 'env' [-Wunused-variable]
                          JNIEnv* env = getJniEnv();
                                  ^
  1 warning generated.
  BTScaner.cpp
BTScaner.cpp(98,1): warning : non-void function does not return a value in all control paths [-Wreturn-type]
  }
  ^
BTScaner.cpp(111,1): warning : non-void function does not return a value in all control paths [-Wreturn-type]
  }
  ^
  2 warnings generated.
  ConversionWchar.cpp
  ld: error: undefined symbol: wcstoll
  >>> referenced by string.cpp:73 (/buildbot/src/android/ndk-release-r23\toolchain/llvm-project/libcxx/src/string.cpp:73)
  >>>               string.o:(std::__ndk1::stoll(std::__ndk1::basic_string<wchar_t, std::__ndk1::char_traits<wchar_t>, std::__ndk1::allocator<wchar_t> > const&, unsigned int*, int)) in archive C:\Microsoft\AndroidNDK\android-ndk-r23c\toolchains\llvm\prebuilt\windows-x86_64\sysroot/usr/lib/arm-linux-androideabi\libc++_static.a
  >>> did you mean: wcscoll
  >>> defined in: C:\Microsoft\AndroidNDK\android-ndk-r23c\toolchains\llvm\prebuilt\windows-x86_64\sysroot/usr/lib/arm-linux-androideabi/19\libc.so
  ld: error: undefined symbol: wcstoull
  >>> referenced by string.cpp:73 (/buildbot/src/android/ndk-release-r23\toolchain/llvm-project/libcxx/src/string.cpp:73)
  >>>               string.o:(std::__ndk1::stoull(std::__ndk1::basic_string<wchar_t, std::__ndk1::char_traits<wchar_t>, std::__ndk1::allocator<wchar_t> > const&, unsigned int*, int)) in archive C:\Microsoft\AndroidNDK\android-ndk-r23c\toolchains\llvm\prebuilt\windows-x86_64\sysroot/usr/lib/arm-linux-androideabi\libc++_static.a
  >>> did you mean: wcstoul
  >>> defined in: C:\Microsoft\AndroidNDK\android-ndk-r23c\toolchains\llvm\prebuilt\windows-x86_64\sysroot/usr/lib/arm-linux-androideabi/19\libc.so
  ld: error: undefined symbol: wcstof
  >>> referenced by string.cpp:190 (/buildbot/src/android/ndk-release-r23\toolchain/llvm-project/libcxx/src/string.cpp:190)
  >>>               string.o:(std::__ndk1::stof(std::__ndk1::basic_string<wchar_t, std::__ndk1::char_traits<wchar_t>, std::__ndk1::allocator<wchar_t> > const&, unsigned int*)) in archive C:\Microsoft\AndroidNDK\android-ndk-r23c\toolchains\llvm\prebuilt\windows-x86_64\sysroot/usr/lib/arm-linux-androideabi\libc++_static.a
  clang: error: linker command failed with exit code 1 (use -v to see invocation)
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Application Type\Android\3.0\Android.Common.targets(125,5): error MSB6006: "clang.exe" завершилась с кодом 1.
